--- a/contact.html
+++ b/contact.html
@@ -12,49 +12,38 @@
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to The Little Taco Shop</h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="index.html#about">About LTS</a></li>
-                <li><a href="index.html#menu">Our Menu</a></li>
-                <li><a href="/hours.html">Store Hours</a></li>
+    <header class="header">
+        <h1 class="header__h1">Contact Us</h1>
+        <nav class="header__nav">
+            <ul class="header__ul">
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/#menu">Menu</a>
+                </li>
+                <li>
+                    <a href="/hours.html">Hours</a>
+                </li>
+                <li>
+                    <a href="/about.html">About</a>
+                </li>
             </ul>
         </nav>
-        <figure>
-            <img src="/img/tacos_close_up_400x260.png" alt="tacos">
-            <figcaption>Little Taco Shop Tacos</figcaption>
-        </figure>
     </header>
-    <main>
-        <section>
 
-            <h2>Our Contact Form</h2>
-            <form action="https://httpbin.org/get" method="get">
-                <fieldset>
-                    <legend>Send Us A Message</legend>
-                    <p>
-                        <label for="name">Name:</label>
-                        <input type="text" name="name" id="name" placeholder="your name" required>
-                    </p>
-                    <p>
-                        <label for="email">Email:</label>
-                        <input type="text" name="email" id="email" placeholder="your email" required>
-                    </p>
-                    <p>
-                        <label for="message">Your Message:</label>
-                        <br>
-                        <textarea name="message" id="message" cols="30" rows="10"
-                            placeholder="type your message here"></textarea>
-                    </p>
-                </fieldset>
-                <button type="submit">Send</button>
-                <button type="reset">Reset</button>
-            </form>
-        </section>
-        <br>
-        <section>
+    <section class="hero">
+        <figure>
+            <img src="/img/tacos_close_up_1000x649.png" alt="Little Taco Shop Tacos" title="tacos Ready to eat!"
+                width="1000" height="649">
+            <figcaption class="offscreen">
+                Little Taco Shop Tacos
+            </figcaption>
+        </figure>
+    </section>
+
+    <main class="main">
+        <article class="main__article">
             <h2>Our Location</h2>
             <address>
                 555 Taco Temptation Lane, suite T <br>
@@ -62,14 +51,46 @@
                 <br><br>
                 Phone: <a href="tel:+5555555555">555-555-5555</a>
             </address>
-        </section>
+        </article>
+
+        <article class="contact">
+            <h2 class="contact__h2">Our Contact Form</h2>
+            <form action="https://httpbin.org/get" method="get" class="contact__form">
+                <fieldset class="contact__fieldset">
+                    <p class="contact__p">
+                        <label for="name" class="contact__label">Name:</label>
+                        <input class="contact__input" type="text" name="name" id="name" placeholder="your name"
+                            required>
+                    </p>
+                    <p class="contact__p">
+                        <label for="email" class="contact__label">Email:</label>
+                        <input class="contact__input" type="text" name="email" id="email" placeholder="your email"
+                            required>
+                    </p>
+                    <p class="contact__p">
+                        <label for="message" class="contact__label">Your Message:</label>
+                        <br>
+                        <textarea class="contact__textarea" name="message" id="message" cols="30" rows="10"
+                            placeholder="type your message here"></textarea>
+                    </p>
+                </fieldset>
+                <button type="submit" class="contact__button">Send</button>
+                <button type="reset" class="contact__button">Reset</button>
+            </form>
+        </article>
+        <br>
+        <p class="center">
+            <a href="#">Back to Top</a>
+        </p>
     </main>
-    <p>
-        <a href="#">Back to Top</a>
-    </p>
-    <hr>
     <footer>
-        <p>Copyright &copy; The Little Taco Shop</p>
+        <p>
+            <span class="nowrap">Copyright &copy; </span>
+            <span class="nowrap">Little Taco Shop</span>
+            <br>
+            <span class="nowrap">Project inspired by <a href="https://github.com/gitdagray" target="_blank">Dave
+                    Gray</a></span>
+        </p>
     </footer>
 </body>
 
