--- a/hours.html
+++ b/hours.html
@@ -12,38 +12,57 @@
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to The Little Taco Shop</h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="index.html#about">About LTS</a></li>
-                <li><a href="index.html#menu">Our Menu</a></li>
-                <li><a href="/contact.html">Contact Us</a></li>
+    <header class="header">
+        <h1 class="header__h1">Little Taco Shop Hours</h1>
+        <nav class="header__nav">
+            <ul class="header__ul">
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/#menu">Menu</a>
+                </li>
+                <li>
+                    <a href="/contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="/about.html">About</a>
+                </li>
             </ul>
         </nav>
-        <figure>
-            <img src="/img/tacos_tray_400x267.png" alt="tacos_tray">
-            <figcaption>A Tray of Tacos</figcaption>
-        </figure>
     </header>
-    <hr>
-    <main>
-        <p>We are open 7 days a week!</p>
-        <dl>
-            <dt>Sunday-Thursday</dt>
-            <dd>11am-9pm</dd>
 
-            <dt>Friday-Saturday</dt>
-            <dd>11am-11pm</dd>
-        </dl>
-        <p>
-            <a href="#">Back to Top</a>
-        </p>
+    <section class="hero">
+        <figure>
+            <img src="/img/tacos_tray_1000x667.png" alt="A tray of tasty Tacos" title="We Love Trays of Tacos!"
+                width="1000" height="667">
+            <figcaption class="offscreen">A Tray of Tacos</figcaption>
+        </figure>
+    </section>
+
+    <main class="main">
+        <article class="main__article">
+            <p>We are open 7 days a week!</p>
+            <dl>
+                <dt>Sunday-Thursday</dt>
+                <dd>11am-9pm</dd>
+
+                <dt>Friday-Saturday</dt>
+                <dd>11am-11pm</dd>
+            </dl>
+            <p class="center">
+                <a href="#">Back to Top</a>
+            </p>
+        </article>
     </main>
-    <hr>
     <footer>
-        <p>Copyright &copy; The Little Taco Shop</p>
+        <p>
+            <span class="nowrap">Copyright &copy; </span>
+            <span class="nowrap">Little Taco Shop</span>
+            <br>
+            <span class="nowrap">Project inspired by <a href="https://github.com/gitdagray" target="_blank">Dave
+                    Gray</a></span>
+        </p>
     </footer>
 </body>
 
