--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Prashant Bisht">
     <meta name="discription" content="About Little Taco Shop">
     <title>About LTS</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
