--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Prashant Bisht">
     <meta name="discription" content="Little Taco Shop Contact">
     <title>Contact Us - LTS</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
