--- a/hours.html
+++ b/hours.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Prashant Bisht">
     <meta name="discription" content="Little Taco Shop Open Hours">
     <title>Store Hours - LTS</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
