--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Prashant Bisht">
     <meta name="description" content="Little Taco Shop Homepage">
     <title>Little Taco Shop</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -17,16 +17,16 @@
         <nav class="header__nav">
             <ul class="header__ul">
                 <li>
-                    <a href="#menu">Menu</a>
+                    <a href="/#menu">Menu</a>
                 </li>
                 <li>
-                    <a href="hours.html">Hours</a>
+                    <a href="/hours.html">Hours</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="/about.html">About</a>
                 </li>
             </ul>
         </nav>
